[package]
name = "sc-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
block-builder = { package = "sc-block-builder", path = "block-builder" }
client-api = { package = "sc-client-api", path = "api" }
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
consensus = { package = "sp-consensus", path = "../primitives/consensus/common" }
derive_more = { version = "0.99.2" }
executor = { package = "sc-executor", path = "executor" }
externalities = { package = "sp-externalities", path = "../primitives/externalities" }
fnv = { version = "1.0.6" }
futures = { version = "0.3.1", features = ["compat"] }
hash-db = { version = "0.15.2" }
hex-literal = { version = "0.2.1" }
inherents = { package = "sp-inherents", path = "../primitives/inherents" }
keyring = { package = "sp-keyring", path = "../primitives/keyring" }
kvdb = "0.1.1"
log = { version = "0.4.8" }
parking_lot = { version = "0.9.0" }
primitives = { package = "sp-core", path = "../primitives/core" }
rstd = { package = "sp-std", path = "../primitives/sr-std" }
runtime-version = { package = "sp-version", path = "../primitives/sr-version" }
sp-api = { path = "../primitives/sr-api" }
sp-runtime = { path = "../primitives/runtime" }
sp-blockchain = { path = "../primitives/blockchain" }
state-machine = { package = "sp-state-machine", path = "../primitives/state-machine" }
sc-telemetry = { path = "telemetry" }
trie = { package = "sp-trie", path = "../primitives/trie" }
tracing = "0.1.10"

[dev-dependencies]
env_logger = "0.7.0"
tempfile = "3.1.0"
client-db = { package = "sc-client-db", path = "./db", features = ["kvdb-rocksdb"] }
test-client = { package = "substrate-test-runtime-client", path = "../test/utils/runtime/client" }
kvdb-memorydb = "0.1.2"
panic-handler = { package = "sp-panic-handler", path = "../primitives/panic-handler" }
