[package]
name = "sc-client"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
sc-block-builder = { path = "block-builder" }
sc-client-api = { path = "api" }
codec = { package = "parity-scale-codec", version = "1.0.0", features = ["derive"] }
sp-consensus = { path = "../primitives/consensus/common" }
derive_more = { version = "0.99.2" }
sc-executor = { path = "executor" }
sp-externalities = { path = "../primitives/externalities" }
fnv = { version = "1.0.6" }
futures = { version = "0.3.1", features = ["compat"] }
hash-db = { version = "0.15.2" }
hex-literal = { version = "0.2.1" }
sp-inherents = { path = "../primitives/inherents" }
sp-keyring = { path = "../primitives/keyring" }
kvdb = "0.1.1"
log = { version = "0.4.8" }
parking_lot = { version = "0.9.0" }
sp-core = { path = "../primitives/core" }
sp-std = { path = "../primitives/std" }
sp-version = { path = "../primitives/version" }
sp-api = { path = "../primitives/api" }
sp-runtime = { path = "../primitives/runtime" }
sp-blockchain = { path = "../primitives/blockchain" }
sp-state-machine = { path = "../primitives/state-machine" }
sc-telemetry = { path = "telemetry" }
sp-trie = { path = "../primitives/trie" }
tracing = "0.1.10"

[dev-dependencies]
env_logger = "0.7.0"
tempfile = "3.1.0"
substrate-test-runtime-client = { path = "../test-utils/runtime/client" }
kvdb-memorydb = "0.1.2"
sp-panic-handler = { path = "../primitives/panic-handler" }
