[package]
name = "substrate-executor"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = "0.11"
substrate-codec = { path = "../codec" }
polkadot-runtime-std = { path = "../runtime-std" }
substrate-primitives = { path = "../primitives" }
substrate-serializer = { path = "../serializer" }
substrate-state-machine = { path = "../state-machine"  }
native-runtime = { path = "../native-runtime" }
ed25519 = { path = "../ed25519" }
serde = "1.0"
serde_derive = "1.0"
parity-wasm = "0.15.0"
byteorder = "1.1"
rustc-hex = "1.0.0"
triehash = "0.1.0"
hex-literal = "0.1.0"
log = "0.3"

[dev-dependencies]
assert_matches = "1.1"
