[package]
name = "sp-all"
version = "0.1.0"
edition = "2018"
description = "Nothing is expected to depend upon this crate. This is purely to allow everything to be compiled to wasm. E.g. cargo check -p sp-all --no-default-features --target=wasm32-unknown-unknown"

# full_crypto is std only.

[dependencies]
sp-api = { version = "4.0.0-dev", default-features = false, path = "api" }
sp-api-proc-macro = { version = "4.0.0-dev", default-features = false, path = "api/proc-macro", optional = true }
sp-api-test = { version = "2.0.1-dev", default-features = false, path = "api/test", optional = true }
sp-application-crypto = { version = "4.0.0-dev", default-features = false, path = "application-crypto" }
sp-application-crypto-test = { version = "2.0.0", default-features = false, path = "application-crypto/test", optional = true }
sp-arithmetic = { version = "4.0.0-dev", default-features = false, path = "arithmetic" }
sp-arithmetic-fuzzer = { version = "2.0.0-dev", default-features = false, path = "arithmetic/fuzzer", optional = true }
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, path = "authority-discovery", optional = true }
sp-authorship = { version = "4.0.0-dev", default-features = false, path = "authorship" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, path = "block-builder" }
sp-blockchain = { version = "4.0.0-dev", default-features = false, path = "blockchain" }
sp-consensus-aura = { version = "0.10.0-dev", default-features = false, path = "consensus/aura", optional = true }
sp-consensus-babe = { version = "0.10.0-dev", default-features = false, path = "consensus/babe", optional = true }
sp-consensus = { version = "0.10.0-dev", default-features = false, path = "consensus/common" }
sp-consensus-pow = { version = "0.10.0-dev", default-features = false, path = "consensus/pow" }
sp-consensus-vrf = { version = "0.10.0-dev", default-features = false, path = "consensus/vrf" }
sp-core = { version = "4.0.0-dev", default-features = false, path = "core" }
sp-database = { version = "4.0.0-dev", default-features = false, path = "database" }
sp-debug-derive = { version = "3.0.0", default-features = false, path = "debug-derive" }
sp-externalities = { version = "0.10.0-dev", default-features = false, path = "externalities" }
sp-finality-grandpa = { version = "4.0.0-dev", default-features = false, path = "finality-grandpa", optional = true }
sp-inherents = { version = "4.0.0-dev", default-features = false, path = "inherents" }
sp-io = { version = "4.0.0-dev", default-features = false, path = "io" }
sp-keyring = { version = "4.0.0-dev", default-features = false, path = "keyring" }
sp-keystore = { version = "0.10.0-dev", default-features = false, path = "keystore" }
sp-maybe-compressed-blob = { version = "4.0.0-dev", default-features = false, path = "maybe-compressed-blob" }
sp-npos-elections = { version = "4.0.0-dev", default-features = false, path = "npos-elections", optional = true }
sp-npos-elections-compact = { version = "4.0.0-dev", default-features = false, path = "npos-elections/compact", optional = true }
sp-npos-elections-fuzzer = { version = "2.0.0-alpha.5", default-features = false, path = "npos-elections/fuzzer", optional = true }
sp-offchain = { version = "4.0.0-dev", default-features = false, path = "offchain" }
sp-panic-handler = { version = "3.0.0", default-features = false, path = "panic-handler" }
sp-rpc = { version = "4.0.0-dev", default-features = false, path = "rpc" }
sp-runtime = { version = "4.0.0-dev", default-features = false, path = "runtime" }
sp-runtime-interface = { version = "4.0.0-dev", default-features = false, path = "runtime-interface" }
sp-runtime-interface-proc-macro = { version = "4.0.0-dev", default-features = false, path = "runtime-interface/proc-macro", optional = true }
sp-runtime-interface-test = { version = "2.0.0", default-features = false, path = "runtime-interface/test", optional = true }
sp-runtime-interface-test-wasm = { version = "2.0.0", default-features = false, path = "runtime-interface/test-wasm", optional = true }
sp-runtime-interface-test-wasm-deprecated = { version = "2.0.0", default-features = false, path = "runtime-interface/test-wasm-deprecated", optional = true }
sp-sandbox = { version = "0.10.0-dev", default-features = false, path = "sandbox", optional = true }
sp-serializer = { version = "3.0.0", default-features = false, path = "serializer" }
sp-session = { version = "4.0.0-dev", default-features = false, path = "session" }
sp-staking = { version = "4.0.0-dev", default-features = false, path = "staking" }
sp-state-machine = { version = "0.10.0-dev", default-features = false, path = "state-machine" }
sp-std = { version = "4.0.0-dev", default-features = false, path = "std" }
sp-storage = { version = "4.0.0-dev", default-features = false, path = "storage" }
sp-tasks = { version = "4.0.0-dev", default-features = false, path = "tasks", optional = true }
sp-timestamp = { version = "4.0.0-dev", default-features = false, path = "timestamp" }
sp-tracing = { version = "4.0.0-dev", default-features = false, path = "tracing" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, path = "transaction-pool" }
sp-transaction-storage-proof = { version = "4.0.0-dev", default-features = false, path = "transaction-storage-proof" }
sp-trie = { version = "4.0.0-dev", default-features = false, path = "trie" }
sp-utils = { version = "4.0.0-dev", default-features = false, path = "utils" }
sp-version = { version = "4.0.0-dev", default-features = false, path = "version" }
sp-wasm-interface = { version = "4.0.0-dev", default-features = false, path = "wasm-interface" }

# We enable it only for web-wasm check
# See https://docs.rs/getrandom/0.2.1/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["std"]
# Each 'optional' crate listed above should have an entry in std:
std = [
	"sp-authority-discovery/std",
	"sp-consensus-aura/std",
	"sp-consensus-babe/std",
	"sp-finality-grandpa/std",
	"sp-npos-elections/std",
	"sp-sandbox/std",
	"sp-tasks/std",
	"sp-runtime-interface-test-wasm/std",

	# crates without std feature defined upon them:
	"sp-application-crypto-test",
	"sp-api-test",
	"sp-api-proc-macro",
	"sp-arithmetic-fuzzer",
	"sp-npos-elections-compact",
	"sp-npos-elections-fuzzer",
	"sp-runtime-interface-proc-macro",
	"sp-runtime-interface-test",
	"sp-runtime-interface-test-wasm-deprecated/std",
]
