[package]
name = "polkadot-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
error-chain = "0.11"
jsonrpc-core = { git="https://github.com/paritytech/jsonrpc.git" }
jsonrpc-macros = { git="https://github.com/paritytech/jsonrpc.git" }
polkadot-client = { path = "../client" }
substrate-primitives = { path = "../primitives" }
polkadot-state-machine = { path = "../state-machine" }

[dev-dependencies]
assert_matches = "1.1"
substrate-executor = { path = "../executor" }
