[package]
name = "subkey"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
primitives = { package = "substrate-primitives",  version = "*", path = "../core/primitives" }
node-runtime = { version = "*", path = "../node/runtime" }
node-primitives = { version = "*", path = "../node/primitives" }
sr-primitives = { version = "*", path = "../core/sr-primitives" }
rand = "0.6"
clap = { version = "~2.32", features = ["yaml"] }
tiny-bip39 = "0.6.0"
rustc-hex = "2.0"
substrate-bip39 = "0.3.1"
hex = "0.3"
hex-literal = "0.2"
codec = { package = "parity-scale-codec", version = "1.0.0" }
system = { package = "srml-system", path = "../srml/system" }
balances = { package = "srml-balances", path = "../srml/balances" }

[features]
bench = []
