[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Substrate test utilities"
edition     = "2018"
homepage    = "https://substrate.dev"
license     = "Apache-2.0"
name        = "substrate-test-utils"
repository  = "https://github.com/paritytech/substrate/"
version     = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
tokio   = { version = "1.10", features = ["macros", "time"] }

substrate-test-utils-derive = { version = "0.10.0-dev", path = "./derive" }

[dev-dependencies]
trybuild = { version = "1.0.43", features = ["diff"] }

sc-service = { version = "0.10.0-dev", path = "../client/service" }
