[package]
name = "substrate-test-utils"
license = "Apache-2.0"
description = "Substrate test utilities"
publish = false
authors.workspace = true
edition.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.16"
tokio = { version = "1.22.0", features = ["macros", "time"] }
substrate-test-utils-derive = { path = "./derive" }

[dev-dependencies]
trybuild = { version = "1.0.53", features = [ "diff" ] }
sc-service = { path = "../client/service" }
